# autocode

./: .gitignore  CHANGELOG.md  README.md  README_TESTING.md  README_USAGE.md  __init__.py  add_js.md  api.py  autocode_config.yml  cli.py  daemon.py  doc_checker.py  doc_indexer.py  implementation_plan.md  models.py  opencode_executor.py  problems.md  pyproject.toml  pytest.ini  token_counter.py
.clinerules/: dependencies_uv.md  docs_index.json  opencode.md
.clinerules/workflows/: C_code_improve.md  GIT_CONTEXT.md  GIT_EXPLAIN_STAGE.md  GIT_LLM_COMMIT_MESSAGE.md  W_1_generate_modular_docs.md  W_2_generate_modular_tests.md  W_3_commit.md  generar_informe_md_diagramas.md  task-template.md  workflow_create.md
api/: models.py  server.py
autocode/: __init__.py  app.py  cli.py  health_gates.py  pytest_plugin.py  test_chat_migration.md
autocode/api/: models.py  server.py
autocode/autocode/: __init__.py
autocode/autocode/interfaces/: api.py  cli.py  mcp.py  models.py  registry.py  utils.py
autocode/autocode/web/: base.html  index.html
autocode/core/: __init__.py  code_to_design.py  doc_checker.py  doc_indexer.py  models.py  opencode_executor.py  registry.py
autocode/core/ai/: README.md  dspy_utils.py  models.py  opencode_executor.py  pipelines.py  providers.py  signatures.py  streaming.py
autocode/core/code/: __init__.py  analyzer.py  architecture.py  coupling.py  health.py  metrics.py  models.py  snapshots.py  structure.py
autocode/core/config/: types.py
autocode/core/design/: __init__.py  code_to_design.py  utils.py
autocode/core/docs/: __init__.py  checker.py  doc_indexer.py  io.py  types.py
autocode/core/hello/: __init__.py  hello_world.py
autocode/core/math/: __init__.py  calculator.py
autocode/core/planning/: __init__.py  executor.py  executor_helpers.py  file_ops.py  models.py  persistence.py  planner.py  reviewer.py  transitions.py  workflow.py
autocode/core/test/: __init__.py
autocode/core/utils/: file_utils.py  git_utils.py  openrouter.py  sse.py
autocode/core/vcs/: __init__.py  execution.py  git.py  log.py  models.py  operations.py  status.py  tree.py
autocode/core/workflow/: README.md  __init__.py  session.py
autocode/interfaces/: ARCHITECTURE.md  __init__.py  api.py  cli.py  logging_config.py  mcp.py  models.py  registry.py
autocode/orchestration/: daemon.py
autocode/testing/: README.md  __init__.py  gates.py  plugin.py
autocode/web/: __init__.py
autocode/web/elements/: ARCHITECTURE.md  auto-element-generator.js  chat-element.js  refract-client.js
autocode/web/static/: app.js  app.js.backup  design-tokens.css  style.css
autocode/web/templates/: base.html  functions.html  index.html
autocode/web/tests/: index.html
autocode/web/views/: demo.html  functions.html  index.html
autocode_old/api/: __init__.py
autocode_old/core/: __init__.py
autocode_old/core/ai/: __init__.py
autocode_old/core/config/: __init__.py
autocode_old/core/docs/: formatters.py
autocode_old/core/git/: __init__.py  git_analyzer.py
autocode_old/orchestration/: daemon.py  scheduler.py
autocode_old/web/templates/: base.html
core/: __init__.py  test_checker.py
dcc/: README.md  autocode.md  core.md  elements.md  interfaces.md
dcc/elements/: chat.md  code-explorer.md
design/: _index.md
design/autocode/: _index.md  cli_items.md  component_tree.md
design/autocode/api/: _index.md  _module.md  models_class.md  models_items.md  server_items.md
design/autocode/core/: _index.md  _module.md
design/autocode/orchestration/: _module.md  daemon_class.md  daemon_items.md  scheduler_class.md  scheduler_items.md
design/autocode/prompts/: __init___items.md  _module.md
design/autocode/web/: _module.md  component_tree.md
design_examples/: api.md  inference.md  inference_matrix.md  video_editor.md
docs/: _index.md  _module.md  cli.md  implementation-steps.md  project-overview.md
docs/api/: _module.md  models.md  server.md
docs/autocode/: _module.md  cli.md
docs/autocode/api/: _module.md  server.md
docs/autocode/core/: _module.md  code_to_design.md  doc_indexer.md  git_analyzer.md  opencode_executor.md  test_checker.md
docs/autocode/orchestration/: _module.md  daemon.md  scheduler.md
docs/autocode/web/: _module.md
docs/core/: doc_checker.md  token_counter.md
docs/design/: AI_WORKFLOW.md  AI_WORKFLOW_KISS.md
docs/examples/: _module.md  basic_usage.md
docs/orchestration/: _module.md  daemon.md
docs/templates/: ARCHITECTURE_TEMPLATE.md
docs/web/: _module.md
docs_old/autocode/: _module.md  cli.md
docs_old/examples/: _module.md
examples/: basic_usage.py  design_example.md  test.md  test_code.py  test_desing.md
lm_scripts/git-reports/: New-GitCommitsContext.ps1  New-GitStagedDiff.ps1
orchestration/: __init__.py  daemon.py
prompts/: __init__.py  hola-mundo.md
reports/git/: staged-diff.md
scripts/: validate_refactor.py
tasks/: task-001-refactor-cli.md  task-002-cli-tests.md  task-003-api-wrappers.md  task-004-api-tests.md  task-005-init-vue.md  task-005-integrate-tailwind.md  task-006-base-components.md  task-006-simplify-js-structure.md  task-007-migrate-ui-endpoints.md  task-007-router-views.md  task-008-api-thin-layer-migration.md  task-008-polling-regen.md  task-008-ui-testing-optimization.md  task-009-expand-cli-wrappers.md  task-009-ui-e2e-tests.md  task-010-refactor-app-js.md  task-011-update-ui-functional.md  task-012-ui-refactoring-plan.md
tests/: __init__.py  conftest.py  test_code_to_design.py
tests/core/: test_hello.py
tests/e2e/: __init__.py  conftest.py  test_chat_components.py
tests/health/: conftest.py  test_code_health.py
tests/integration/: test_integration.py  test_streaming_integration.py
tests/interfaces/: test_registry.py  test_utils.py
tests/unit/: test_cli_health.py  test_pytest_plugin.py
todo/: acp.md  calculate_context_usage.md  gitnexus.md  health_check_function_ordering.md  health_check_usage_analysis.md  mcp_architecture_sumary.md  memory.md  treemap_models_functions.md  treemap_ux_commit_navigation.md
web/static/: app.js  style.css
web/templates/: index.html
(+428 files in other folders)
