[project]
name = "autocode"
version = "0.3.0"
description = "Automated code quality and development tools with AI integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["automation", "code-quality", "development-tools", "ai", "documentation", "git", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.4",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "tiktoken>=0.9.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.13.4",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[project.scripts]
autocode = "autocode.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/autocode"
"Bug Reports" = "https://github.com/yourusername/autocode/issues"
"Source" = "https://github.com/yourusername/autocode"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autocode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
