[project]
name = "autocode"
version = "0.3.0"
description = "Automated code quality and development tools with AI integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["automation", "code-quality", "development-tools", "ai", "documentation", "git", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.4",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "tiktoken>=0.9.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.13.4",
    "fastapi-mcp>=0.4.0",
    "docstring-parser>=0.17.0",
    "dspy-ai>=3.0.3",
    "mcp>=1.0.0",
    "litellm>=1.80.9",
    "gitpython>=3.1.40",
    "lizard>=1.17.0",
]


[project.scripts]
autocode = "autocode.interfaces.cli:app"

[project.urls]
"Homepage" = "https://github.com/Brunvelop/autocode"
"Bug Reports" = "https://github.com/Brunvelop/autocode/issues"
"Source" = "https://github.com/Brunvelop/autocode"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autocode*"]

[tool.setuptools.package-data]
"autocode.web" = [
    "views/*.html",
    "elements/**/*.js",
    "elements/**/*.html",
    "elements/**/*.css",
    "tests/**/*.html",
    "tests/**/*.js",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=autocode",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests for individual functions and classes",
    "integration: Integration tests for cross-module functionality",
    "slow: Tests that take longer to run",
    "api: Tests for API functionality",
    "cli: Tests for CLI functionality",
    "mcp: Tests for MCP integration",
    "registry: Tests for function registry",
    "models: Tests for Pydantic models",
    "health: Code health quality gate tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*pkg_resources.*:ImportWarning",
]

[tool.codehealth]
# Critical = test FALLA | Warning = muestra aviso visible en output
# Umbrales calibrados con el estado actual del código (2026-10-03).
# Subir gradualmente para endurecer la quality gate con el tiempo.

# Maintainability Index (0-100, mayor es mejor)
# Peor archivo actual: test_architecture.py = 4.1
critical_mi = 3.0
warning_mi = 20.0
# Cyclomatic Complexity por función
# Peor función actual: treemap._renderTooltip() = 90
critical_function_cc = 95
warning_function_cc = 15
# Máximo de funciones con rank F (CC > 25) permitidas
# Estado actual: 4 funciones (generate_with_dspy, stream_chat, 2x _renderTooltip)
max_rank_f_functions = 4
# Nesting depth por función
# Peor función actual: treemap-view._renderTooltip() = 18
critical_nesting = 19
warning_nesting = 5
# SLOC por archivo
# Peor archivo actual: test_architecture.py = 1191 SLOC
critical_file_sloc = 1200
warning_file_sloc = 500
# CC media por archivo
critical_avg_complexity = 15.0
warning_avg_complexity = 10.0
# CC media del proyecto (agregado)
# Estado actual: 2.43 ✅
critical_project_avg_complexity = 10.0
warning_project_avg_complexity = 7.0
# MI media del proyecto (agregado)
# Estado actual: 39.5 ⚠️ (por debajo del warning=50 pero sobre el critical=30)
critical_project_avg_mi = 30.0
warning_project_avg_mi = 50.0
# Dependencias circulares entre paquetes
# Estado actual: 1 (autocode.core ↔ autocode.interfaces — conocida)
max_circular_deps = 1
# Globs a excluir del análisis (ej: ["tests/*", "setup.py"])
exclude = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
